2008-09-04  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	And back to development we go...

=== release 0.10.5 ===

2008-09-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* NEWS:
	* RELEASE:
	* configure.ac:
	  releasing 0.10.5, "This little piggy went to market"

2008-09-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps):
	Give the TrueSpeech audio codec a proper caps. This is now synchronized
	with libriff in -base cvs.

2008-08-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.4.3 pre-release

2008-08-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ffmpegrev:
	Adjust time of swscale checkout to ffmpeg revision being used.
	* gst-libs/ext/Makefile.am:
	Fix make distcheck

2008-08-29  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_finalize),
	(gst_ffmpegdec_get_buffer), (gst_ffmpegdec_frame):
	Finalizing a decoder that was never used shouldn't trigger an assertion.
	Add debug messages for the two other g_assert_if_reached().

2008-08-29  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ff_aud_caps_new):
	Instead of marking all audio decoders/encoders as accepting up to 6
	channels, we white-list those for which we are sure they can handle
	those 6 channels.
	Fixes #549799

2008-08-28  Michael Smith <msmith@songbirdnest.com>

	* ext/ffmpeg/gstffmpegdemux.c:
	  gst_pad_template_new() takes ownership of caps; ref them beforehand
	  since we want to keep using them afterwards.

2008-08-28  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ff_aud_caps_new):
	ffmpeg audio decoders can now do up to 6 channels... and actually
	expose it properly. Don't expect any channel mapping though.

2008-08-28  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac: